--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   geolocator: ^9.0.2
   http: ^0.13.5
   geocoding: ^2.0.5
+  fluttertoast: ^8.1.1
 
 dev_dependencies:
   flutter_test:
