--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   geolocator: ^9.0.2
   http: ^0.13.5
-  geocoding: ^2.0.5
+  shared_preferences: ^2.0.15
   fluttertoast: ^8.1.1
 
 dev_dependencies:
