--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.0.15
   fluttertoast: ^8.1.1
+  geocoding: ^2.0.5
 
 dev_dependencies:
   flutter_test:
